--- a/main.bib
+++ b/main.bib
@@ -217,3 +217,12 @@ url = {http://ieeexplore.ieee.org/document/5756277/},
 volume = {13},
 year = {2011}
 }
+@misc{Community2018,
+author = {Jupyter Community, Project Jupyter},
+booktitle = {Project Jupyter},
+mendeley-groups = {CIMAT/Thesis},
+title = {{Project Jupyter}},
+url = {http://jupyter.org/},
+urldate = {May 28, 2018},
+year = {2018}
+}
